src/objects/dwp_dace__Condition__c.object
<CustomObject>
    <description>Condition of a field´s value</description>
    <fields>
        <fullName>dwp_dace__condition_summary_calc__c</fullName>
        <formula>dwp_dace__object_api_name__c + IF(AND(NOT(ISBLANK(dwp_dace__object_api_name__c )),NOT(ISBLANK(dwp_dace__field_api_name__c))),&apos;-&apos;,&apos;&apos;) +  dwp_dace__field_api_name__c + &apos; &apos; +  CASE( dwp_dace__operator_type__c ,
&apos;ID_IN&apos;,&apos;IN&apos;,
&apos;ID_NOTIN&apos;,&apos;NOT IN&apos;,
&apos;ID_EMPTY&apos;,&apos;EMPTY&apos;,
&apos;ID_NOTEMPTY&apos;,&apos;NOT EMPTY&apos;,
&apos;ID_GREATER&apos;,&apos;&gt;&apos;,
&apos;ID_GREATEROREQUAL&apos;,&apos;&gt;=&apos;,
&apos;ID_LESS&apos;,&apos;&lt;&apos;,
&apos;ID_LESSOREQUAL&apos;,&apos;&lt;=&apos;,
&apos;ID_EQUAL&apos;,&apos;=&apos;,
&apos;ID_DISTINCT&apos;,&apos;&lt;&gt;&apos;,&apos;&apos;) + &apos; &apos; + dwp_dace__field_value_1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Summary</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dwp_dace__condition_unique_id__c</fullName>
        <description>Text that uniquely identifies the condition</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <inlineHelpText>Text that uniquely identifies the condition</inlineHelpText>
        <label>Unique Identifier</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>dwp_dace__field_api_name__c</fullName>
        <description>API Name of the field which value is evaluated in the condition</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dwp_dace__field_type__c</fullName>
        <label>Field Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Checkbox</fullName>
                </value>
                <value>
                    <fullName>Currency</fullName>
                </value>
                <value>
                    <fullName>Number</fullName>
                </value>
                <value>
                    <fullName>Percent</fullName>
                </value>
                <value>
                    <fullName>Picklist</fullName>
                </value>
                <value>
                    <fullName>Text</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>dwp_dace__field_value_1__c</fullName>
        <description>First field´s value used in the evaluation of the condition</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>First field´s value used in the evaluation of the condition</inlineHelpText>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dwp_dace__group_behaviour_type__c</fullName>
        <description>Specified in the conditions applied to all or at least one record from the child object</description>
        <inlineHelpText>Specified in the conditions applied to all or at least one record from the child object</inlineHelpText>
        <label>Group Behaviour</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ID_ALL</fullName>
                    <label>ALL</label>
                </value>
                <value>
                    <fullName>ID_ATLEASTONE</fullName>
                    <label>AT LEAST ONE</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>dwp_dace__logical_operator_type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Condition Logic</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dwp_dace__object_api_name__c</fullName>
        <description>API Name of the object which field´s value is evaluated in the condition or if is a child object, the API name of the relationship</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>API Name of the object which field´s value is evaluated in the condition or if is a child object, the API name of the relationship</inlineHelpText>
        <label>Object</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dwp_dace__operator_type__c</fullName>
        <description>Specifies the operator´s type used in the condition evaluation</description>
        <inlineHelpText>Specifies the operator´s type used in the condition evaluation</inlineHelpText>
        <label>Operator</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>dwp_dace__field_type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>ID_IN</fullName>
                    <label>IN</label>
                </value>
                <value>
                    <fullName>ID_NOTIN</fullName>
                    <label>NOT IN</label>
                </value>
                <value>
                    <fullName>ID_EMPTY</fullName>
                    <label>EMPTY</label>
                </value>
                <value>
                    <fullName>ID_NOTEMPTY</fullName>
                    <label>NOT EMPTY</label>
                </value>
                <value>
                    <fullName>ID_GREATER</fullName>
                    <label>&gt;</label>
                </value>
                <value>
                    <fullName>ID_GREATEROREQUAL</fullName>
                    <label>&gt;=</label>
                </value>
                <value>
                    <fullName>ID_LESS</fullName>
                    <label>&lt;</label>
                </value>
                <value>
                    <fullName>ID_LESSOREQUAL</fullName>
                    <label>&lt;=</label>
                </value>
                <value>
                    <fullName>ID_EQUAL</fullName>
                    <label>=</label>
                </value>
                <value>
                    <fullName>ID_DISTINCT</fullName>
                    <label>&lt;&gt;</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Condition</label>
    <listViews>
        <fullName>dwp_dace__All</fullName>
        <columns>NAME</columns>
        <columns>dwp_dace__condition_unique_id__c</columns>
        <columns>dwp_dace__condition_summary_calc__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>dwp_dace__group_behaviour_type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>C-{0000000000}</displayFormat>
        <label>Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Conditions</pluralLabel>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>dwp_dace__FieldTypeRequired</fullName>
        <active>true</active>
        <description>Validates if the field type has been specified when a field has been informed</description>
        <errorConditionFormula>IF(AND(NOT(ISBLANK( dwp_dace__field_api_name__c )),ISBLANK(TEXT(dwp_dace__field_type__c) )),true,false)</errorConditionFormula>
        <errorDisplayField>dwp_dace__field_type__c</errorDisplayField>
        <errorMessage>Please, select a field type</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>dwp_dace__GroupBehaviourNotAllowedIfFieldSpecified</fullName>
        <active>true</active>
        <description>The group behaviour should not be defined if the a field has been specified</description>
        <errorConditionFormula>IF(AND(NOT(ISBLANK(dwp_dace__field_api_name__c )),NOT(ISBLANK( TEXT(dwp_dace__group_behaviour_type__c) ))),true,false)</errorConditionFormula>
        <errorDisplayField>dwp_dace__group_behaviour_type__c</errorDisplayField>
        <errorMessage>Please, clear the group behaviour is a field has been specified</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>dwp_dace__GroupBehaviourReqIfFieldNotSpecified</fullName>
        <active>true</active>
        <description>Group behaviour is required if field has not been specified</description>
        <errorConditionFormula>IF(AND(ISBLANK( dwp_dace__field_api_name__c ),ISBLANK(TEXT( dwp_dace__group_behaviour_type__c ))),true,false)</errorConditionFormula>
        <errorDisplayField>dwp_dace__group_behaviour_type__c</errorDisplayField>
        <errorMessage>Please, specified a group behaviour</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>dwp_dace__OpertorRequired</fullName>
        <active>true</active>
        <description>Validates if the operator has been specified when a field has been informed</description>
        <errorConditionFormula>IF(AND(NOT(ISBLANK( dwp_dace__field_api_name__c )),ISBLANK(TEXT( dwp_dace__operator_type__c ) )),true,false)</errorConditionFormula>
        <errorDisplayField>dwp_dace__operator_type__c</errorDisplayField>
        <errorMessage>Please, select an operator</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>dwp_dace__ValueFormatIntervalDate</fullName>
        <active>true</active>
        <description>Check the value format when the field type is Date and operator LAST N DAYS, TODAY OR LAST N DAYS, NEXT N DAYS,TODAY OR NEXT N DAYS,LAST N MONTHS,THIS OR LAST N MONTHS, NEXT N MONTHS,THIS OR NEXT N MONTHS, LAST N YEARS, THIS OR LAST N YEARS, NEXT N YEARS</description>
        <errorConditionFormula>IF(
AND(
AND(
TEXT( dwp_dace__operator_type__c ) == &apos;ID_LASTNDAYS&apos;,
TEXT( dwp_dace__operator_type__c ) == &apos;ID_TODAYORLASTNDAYS&apos;,
TEXT( dwp_dace__operator_type__c ) == &apos;ID_NEXTNDAYS&apos;,
TEXT( dwp_dace__operator_type__c ) == &apos;ID_TODAYORNEXTNDAYS&apos;,
TEXT( dwp_dace__operator_type__c ) == &apos;ID_THISMONTH&apos;,
TEXT( dwp_dace__operator_type__c ) == &apos;ID_LASTNMONTHS&apos;,
TEXT( dwp_dace__operator_type__c ) == &apos;ID_THISORLASTNMONTHS&apos;,
TEXT( dwp_dace__operator_type__c ) == &apos;ID_NEXTNMONTHS&apos;,
TEXT( dwp_dace__operator_type__c ) == &apos;ID_THISORNEXTNMONTHS&apos;,
TEXT( dwp_dace__operator_type__c ) == &apos;ID_LASTNYEARS&apos;,
TEXT( dwp_dace__operator_type__c ) == &apos;ID_THISORLASTNYEARS&apos;,
TEXT( dwp_dace__operator_type__c ) == &apos;ID_NEXTNYEARS&apos;,
TEXT( dwp_dace__operator_type__c ) == &apos;ID_THISORNEXTNDAYS&apos;),
OR(TEXT( dwp_dace__field_type__c ) == &apos;Date&apos;),NOT(ISNUMBER( dwp_dace__field_value_1__c ))),true,false)</errorConditionFormula>
        <errorMessage>Enter a valid number format</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>dwp_dace__ValueFormatSpecificDate</fullName>
        <active>true</active>
        <description>Check the value format when the field type is Date</description>
        <errorConditionFormula>IF(
AND(
  OR(TEXT(dwp_dace__operator_type__c) == &apos;ID_GREATER&apos;,
  TEXT(dwp_dace__operator_type__c) == &apos;ID_GREATEROREQUAL&apos;,
  TEXT(dwp_dace__operator_type__c) == &apos;ID_LESS&apos;,
  TEXT(dwp_dace__operator_type__c) == &apos;ID_LESSOREQUAL&apos;,
  TEXT(dwp_dace__operator_type__c) == &apos;ID_EQUAL&apos;,
  TEXT(dwp_dace__operator_type__c) == &apos;ID_DISTINCT&apos;),
  AND(TEXT(dwp_dace__field_type__c) == &apos;Date&apos;),
  AND(dwp_dace__field_value_1__c &lt;&gt; &apos;TODAY&apos;,
    dwp_dace__field_value_1__c &lt;&gt; &apos;TOMORROW&apos;,
    dwp_dace__field_value_1__c &lt;&gt; &apos;YESTERDAY&apos;),
  NOT(REGEX(dwp_dace__field_value_1__c, &quot;[0-9]{2}-[0-9]{2}-[0-9]{4}&quot;))),true,false)</errorConditionFormula>
        <errorMessage>Enter a valid date format DD-MM-YYYY or the valid key words TODAY, TOMORROW, YESTERDAY.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>dwp_dace__ValueFormatWhenCheckboxFieldType</fullName>
        <active>true</active>
        <description>Check if the value has the correct format when the field type is Checkbox</description>
        <errorConditionFormula>IF(AND(TEXT( dwp_dace__field_type__c )== &apos;Checkbox&apos; , UPPER(dwp_dace__field_value_1__c) &lt;&gt; UPPER(&apos;TRUE&apos;),UPPER(dwp_dace__field_value_1__c) &lt;&gt; UPPER(&apos;FALSE&apos;)),true,false)</errorConditionFormula>
        <errorDisplayField>dwp_dace__field_value_1__c</errorDisplayField>
        <errorMessage>Please, set the value to true or false</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>dwp_dace__ValueFormatWhenFieldTypeNumber</fullName>
        <active>true</active>
        <description>Check the value format when the field type is Number, Percent or Currency</description>
        <errorConditionFormula>IF(AND(AND(TEXT( dwp_dace__operator_type__c ) &lt;&gt; &apos;ID_EMPTY&apos;,TEXT( dwp_dace__operator_type__c ) &lt;&gt; &apos;ID_NOTEMPTY&apos;),OR(TEXT( dwp_dace__field_type__c ) == &apos;Number&apos;,TEXT( dwp_dace__field_type__c ) == &apos;Percent&apos;,TEXT( dwp_dace__field_type__c ) == &apos;Currency&apos;),NOT(ISNUMBER( dwp_dace__field_value_1__c ))),true,false)</errorConditionFormula>
        <errorDisplayField>dwp_dace__field_value_1__c</errorDisplayField>
        <errorMessage>Enter a valid number format</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>dwp_dace__ValueRequired</fullName>
        <active>true</active>
        <description>Validates if the value has been specified when the operator has specific values</description>
        <errorConditionFormula>IF(
AND(
AND(TEXT(dwp_dace__operator_type__c) &lt;&gt;  &apos;ID_EMPTY&apos; ,TEXT(dwp_dace__operator_type__c) &lt;&gt; &apos;ID_NOTEMPTY&apos;,
TEXT(dwp_dace__operator_type__c) &lt;&gt; &apos;ID_THISMONTH&apos;,
TEXT(dwp_dace__operator_type__c) &lt;&gt; &apos;ID_THISYEAR&apos;,
NOT(ISBLANK(TEXT(dwp_dace__operator_type__c))) ),
OR(ISBLANK( dwp_dace__field_value_1__c ),ISNULL(dwp_dace__field_value_1__c ))),true,false)</errorConditionFormula>
        <errorDisplayField>dwp_dace__field_value_1__c</errorDisplayField>
        <errorMessage>Please, specify a value</errorMessage>
    </validationRules>
</CustomObject>